# appunvs

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: ci.yml  lint.yml  native.yml
app/: README.md  app.json  metro.config.js  package.json  tsconfig.json
app/app/: _layout.tsx
appunvs/android/: .gitignore  README.md  build.gradle.kts  gradle.properties
appunvs/ios/: .gitignore  README.md  project.yml
browser/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts
browser/src/: ambient.d.ts  app.d.ts  app.html
browser/tests-e2e/: two-browsers-sync.spec.ts
desktop/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
desktop/src/: app.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/src/: config.rs  lib.rs  main.rs  state.rs  wire.rs
desktop/src-tauri/src/commands/: mod.rs
desktop/src-tauri/src/db/: mod.rs  records.rs
desktop/src-tauri/src/relay/: auth.rs  mod.rs
desktop/src-tauri/src/sync/: mod.rs
desktop/src-tauri/tests/: drift.rs  e2e.rs
docs/: architecture.md  auth.md  competitive-landscape.md  conventions.md  deploy.md  design-system-init.md  protocol.md  providers.md
mobile/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
relay/: .env.example  .gitignore  .golangci.yml  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
runtime/: ARCHITECTURE.md  MODULES.md  README.md  app.json  index.js  package-lock.json  package.json  version.json
(+314 files in other folders)
